--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
   "test": "echo \"Running tests...\" && exit 0",
-  "build": "your_build_command_here"
+  "build": "react-scripts build"
+
 },
   "author": "",
   "license": "ISC",
