--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-  "test": "echo \"Running tests...\" && exit 0",
-  "build": "react-scripts build"
-
+  "test": "echo \"Running tests...\" && exit 0"
 },
   "author": "",
   "license": "ISC",
