--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-  "test": "echo \"Running tests...\" && exit 0",
-  "build": "npm run test"
-
-},
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build":"npm run test"
+  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "description": ""
